--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server side of 2048 game.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shapeng1998/2048-backend.git"
+    "url": "git+https://github.com/F-jie/test.git"
   },
   "main": "server.js",
   "scripts": {
