--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
 jobs:
   build:
-    runs-on: ubuntu-latest      
+    runs-on: centos-latest      
     steps:
       - uses: actions/checkout@v2
       - name: Build Image
