--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,6 @@ jobs:
             docker stop $(docker ps --filter ancestor=${{ secrets.DOCKER_REPOSITORY }} -q)
             docker rm -f $(docker ps -a --filter ancestor=${{ secrets.DOCKER_REPOSITORY }}:latest -q)
             docker rmi -f $(docker images ${{ secrets.DOCKER_REPOSITORY }}:latest -q)
-            docker login --username=${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-hangzhou.aliyuncs.com
+            docker login --username=${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ secrets.DOCKER_ADDRESS }}
             docker pull ${{ secrets.DOCKER_REPOSITORY }}:latest
-            docker run -d -p 8000:4000 ${{ secrets.DOCKER_REPOSITORY }}:latest
+            docker run --env DB_URL="${{ secrets.DB_URL }}" -d -p 3000:3000 ${{ secrets.DOCKER_REPOSITORY }}:latest
